--- a/src/App/styles.scss
+++ b/src/App/styles.scss
@@ -5,75 +5,97 @@
   font-family: 'Roboto', sans-serif;
   line-height: 1.5em;
 
-  .configuration-container {
-    border: 2px solid darkgray;
-    border-radius: 10px;
-    width: 250px;
-    padding: 20px;  
-  
-    .input-container {
-      margin-top: 5px;
+  .app-container {
+    display: flex;
+    justify-content: center;
+
+    @media only screen and (max-width: 1050px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    
+    .configuration-container {
+      border: 2px solid darkgray;
+      border-radius: 10px;
+      width: 250px;
+      padding: 20px;  
       
-      &__element {
-        display: flex;
-        justify-content: space-between;
-
-        &--number {
-          text-align: right;
-        }
-      
-        &--error{
-          color: red;
-          font-weight: bold;
-          font-size: 14px;
-        }
-
-        &--commands {
-          width: 210px;
-          text-align: center;
-        }
-
-        &--centered {
+      .input-container {
+        margin-top: 5px;
+        
+        &__element {
           display: flex;
-          justify-content: center;
-        }
-
-        &--button {
-          margin-top: 15px;
-          box-shadow:inset 0px 1px 3px 0px #91b8b3;
-          background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
-          background-color:#768d87;
-          border-radius:5px;
-          border:1px solid #566963;
-          display:inline-block;
-          cursor:pointer;
-          color:#ffffff;
-          font-size:15px;
-          font-weight:bold;
-          padding:11px 23px;
-          text-decoration:none;
-          text-shadow:0px -1px 0px #2b665e;
-        
-          &:hover {
-            background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
-            background-color:#6c7c7c;
+          justify-content: space-between;
+          
+          &--number {
+            text-align: right;
           }
-
-          &:active {
-            position:relative;
-            top:1px;
+          
+          &--error{
+            color: red;
+            font-weight: bold;
+            font-size: 14px;
           }
-        
-        
+          
+          &--commands {
+            width: 210px;
+            text-align: center;
+          }
+          
+          &--centered {
+            display: flex;
+            justify-content: center;
+          }
+          
+          &--button {
+            margin-top: 15px;
+            box-shadow:inset 0px 1px 3px 0px #91b8b3;
+            background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+            background-color:#768d87;
+            border-radius:5px;
+            border:1px solid #566963;
+            display:inline-block;
+            cursor:pointer;
+            color:#ffffff;
+            font-size:15px;
+            font-weight:bold;
+            padding:11px 23px;
+            text-decoration:none;
+            text-shadow:0px -1px 0px #2b665e;
+            
+            &:hover {
+              background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+              background-color:#6c7c7c;
+            }
+            
+            &:active {
+              position:relative;
+              top:1px;
+            }
+            
+            &:disabled {
+              opacity: 0.5;
+            }
+            
+          }
         }
       }
     }
-  }
-
-  h1, h2, h3 {
-    text-align: center;
-  }
-  h1, h2 {
-    margin-top: 10px;
+    .rover-container {
+      width: 800px;
+    
+      @media only screen and (max-width: 1050px) {
+        width: 100%;
+      }
+    
+    }
+    
+    h1, h2, h3 {
+      text-align: center;
+    }
+    h1, h2 {
+      margin-top: 10px;
+    }
   }
 }
